Finish Day 1
I forgot my own utils so it took me longer to do it on the fly than it otherwise should have